static/styles.css
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');


body {
    background-image: url(/static/background.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center center;
    color: #212529;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    margin: 0;
    text-align: left;
}

.art {
    width: 90%;
    margin: 0 auto;
    margin-top: 10px;
    background-color: #000;
    padding: 5px;
    font-size: 3px;
    line-height: 0pt;
    text-align: center;
    font-family: 'Courier';
    color: #fff;
    /* font-weight: bold; */
}

.align button {
    margin: 19px;
    float: left;
}

.align {
    display: flex;
    justify-content: center;
}

.header h4 {
    color: rgb(207, 207, 207);
    font-size: 17px;
}

.header {
    background-color: rgba(19, 19, 19, 0.3);
    color: #fff;
    margin-bottom: 2rem;
    padding: 2rem 1rem;
    text-align: center;
    width: 95%;
    border-radius: 0 0 10px 10px;
    margin: auto;
    user-select: none;
}

.header h1 {
    font-size: 3rem;
    font-family: 'Archivo Black', sans-serif;
}

.container {
    color: white;
    margin-left: auto;
    margin-right: auto;
    padding-left: 15px;
    padding-right: 15px;
    margin-bottom: 15px;
}

.section {
    width: 95%;
    margin: auto;
    border-radius: 10px;
    margin-top: 15px;
    padding: 0.5rem 2rem 1rem 2rem;
    user-select: none;
}

.section:hover {
    background-color: rgba(19, 19, 19, 0.25);
    transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
}

.section h2 {
    font-family: 'Archivo Black', sans-serif;
    text-decoration: underline;
    text-decoration-style: wavy;
    text-decoration-color: black;
}

.section h3 {
    font-size: 15px;
}

.section p, .header h4, .section h3, .radio, .section h4 {
    font-family: 'Lato', sans-serif;
}

.orange {
    color: orange;
}

#file {
  appearance: none;
  background-color: #FAFBFC;
  border-radius: 6px;
  color: #24292E;
  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  padding: 6px 16px;
  transition: background-color 0.2s;
  user-select: none;
  -webkit-user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  word-wrap: break-word;
}

#file:hover {
  background-color: rgb(219,219,219);
  text-decoration: none;
}

#file:focus {
  outline: 1px transparent;
}

#file:-webkit-details-marker {
  display: none;
}

.button {
  align-items: center;
  background-color: #000;
  border: 2px solid #111;
  border-radius: 7px;
  color: #fff;
  font-size: 16px;
  height: 36px;
  justify-content: center;
  line-height: 20px;
  max-width: 100%;
  padding: 0 25px;
  position: relative;
  text-align: center;
  user-select: none;
}

input[type=radio], img, button, #file {
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
}

#error {
    width: 600px !important;
    height: auto;
}

.options {
    color: white;
    text-align: center;
}

.end {
    margin-bottom: 30px;
}

#link {
    color: black;
    background-color: white;
    text-decoration: 2px underline;
    text-decoration-color: grey;
    text-decoration-style: wavy;
    font-weight: bold !important;
    border-radius: 2px;
}

@media only screen and (max-width: 600px) {
    .header h1 {
        font-size: 30px;
    }

    .header h4 {
        font-size: 15px;
    }

    .section h2 {
        font-size: 23px;
    }

    .section h3 {
        font-size: 13px;
    }

    .section {
        width: 85%;
        padding: 0.5rem 1.5rem;
        word-wrap: break-word;
        background-color: rgba(19, 19, 19, 0.25);
    }

    .upload {
        word-break: break-all;
    }

    .header {
        width: 85%;
        padding: 2rem 1rem;
    }    

    #error {
        width: 330px !important;
    }

    .section img {
        width: 100px;
        height: auto;
    }

    #file {
        width: 80%;
    }

    .button {
        margin-top: 5px;
    }

    .radio {
        font-size: 15px;
    }
}

